--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="./styles/nav.css" type= "text/css"/>
+    <link rel="stylesheet" href="./styles/header.css" type="text/css"/>
 
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/396cae99c5.js" crossorigin="anonymous"></script>
@@ -37,6 +38,17 @@
         </span>
       </div>
     </nav>
+
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
+
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
