--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,12 @@
       </div>
   </header>
 
-
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <h1>Hello this is Tweeter app</h1>
+      <h2>This is Front end application</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo mollitia voluptatibus itaque earum maxime deserunt impedit 
+        nesciunt facere expedita quae reiciendis, alias error vel molestiae recusandae laboriosam voluptates, magnam explicabo.</p>
+    </main>
   </body>
 </html>
