--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,20 @@
     <link rel="stylesheet" href="./styles/nav.css" type= "text/css"/>
     <link rel="stylesheet" href="./styles/header.css" type="text/css"/>
     <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css"/>
+    <link rel="stylesheet" href="./styles/tweets.css" type="text/css"/>
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
     <!-- FONT AWESOME -->
     <script src="https://kit.fontawesome.com/396cae99c5.js" crossorigin="anonymous"></script>
+    <!-- timeago Js link from mdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+   
   
   </head>
 
@@ -58,10 +62,37 @@
         <form method='POST' action='/tweets/'>
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
+          <div>
           <button type="submit">Tweet</button> 
           <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
         </form>
       </section>
+      
+      
+      <!-- container for all the tweets. -->
+      <section id="tweets-container">
+        <article class='tweet'>
+          <header>
+            <div class='tweet-icon'>
+              <div class='icon-img'><img src= "https://i.imgur.com/73hZDYK.png"></div>
+              <div class='icon-text'>Sujatha</div>
+            </div>
+            <span class="user">@Username</span>
+          </header>
+            <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam pariatur, fugit facilis aperiam libero unde animi illum expedita
+            </section>
+          <footer>
+            <div>10 days ago</div>
+            <span class="icons">
+              <i class="fas fa-flag"></i>
+              <i class="fas fa-retweet"></i>
+              <i class="fas fa-heart"></i>
+            </span>
+          </footer>
+        </article>
+      </section>
     </main>
+    <script type="text/javascript" src="./scripts/char-counter,js"></script>
   </body>
 </html>
