Implemented the character counter for the tweet compose form

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="./scripts/compose-char-counter.js"></script>
    
   
   </head>
@@ -93,6 +94,5 @@
         </article>
       </section>
     </main>
-    <script type="text/javascript" src="./scripts/char-counter,js"></script>
   </body>
 </html>
