--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,16 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="error-message">
+        <span class="icon-design">
+          <i class="fas fa-exclamation-triangle"></i>
+        </span>
+        <span id="error-text">
+        </span>
+        <span class="icon-design">
+          <i class="fas fa-exclamation-triangle"></i>
+        </span>
+      </section>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
         <form method='POST' action='/tweets/'>
