--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <script src="https://kit.fontawesome.com/396cae99c5.js" crossorigin="anonymous"></script>
     <!-- timeago Js link from mdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="dist/timeago.js" type="text/javascript"></script>
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
