--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
-    
+    <!-- viewport meta for responsive design -->
+    <meta name ='viewport' content='width=device-width, intial-scale=1.0, maximum-scale=1.0'/>
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <!-- GOOGLE FONT -->
@@ -22,7 +23,7 @@
     <script src="https://kit.fontawesome.com/396cae99c5.js" crossorigin="anonymous"></script>
     <!-- timeago Js link from mdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="dist/timeago.js" type="text/javascript"></script>
+    <!-- <script src="dist/timeago.js" type="text/javascript"></script> -->
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -47,7 +48,7 @@
     </nav>
 
     <header>
-      <div>
+      <div id="image">
           <img src="/images/profile-hex.png"> 
       </div>
       <br>
