added media queries according to screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -40,14 +40,14 @@
       <!-- <i class="fa-brands fa-twitter-square"></i> -->
       <span id = "logo">tweeter</span>
       <div class = "nav-right">
-        <span><b>Write</b> new tweet</span>
+        <span><b>Write</b> a new tweet</span>
         <button type= "button">
          <i class="fas fa-angle-double-down"></i>
         </button>
       </div>
     </nav>
 
-    <header>
+    <header id="profile">
       <div id="image">
           <img src="/images/profile-hex.png"> 
       </div>
