--- a/public/index.html
+++ b/public/index.html
@@ -4,58 +4,79 @@
     <!-- Meta Information -->
     <title>Tweeter - Home Page</title>
     <!-- viewport meta for responsive design -->
-    <meta name ='viewport' content='width=device-width, intial-scale=1.0, maximum-scale=1.0'/>
+    <meta
+      name="viewport"
+      content="width=device-width, intial-scale=1.0, maximum-scale=1.0"
+    />
     <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      type="text/css"
+    />
     <!-- GOOGLE FONT -->
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="./styles/nav.css" type= "text/css"/>
-    <link rel="stylesheet" href="./styles/header.css" type="text/css"/>
-    <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css"/>
-    <link rel="stylesheet" href="./styles/tweets.css" type="text/css"/>
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
+    <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/tweets.css" type="text/css" />
+   
     <!-- FONT AWESOME -->
-    <script src="https://kit.fontawesome.com/396cae99c5.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/396cae99c5.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- timeago Js link from mdn -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- <script src="dist/timeago.js" type="text/javascript"></script> -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"
+      integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+ 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="./scripts/compose-char-counter.js"></script>
-   
-  
+    <script
+      type="text/javascript"
+      src="./scripts/compose-char-counter.js"
+    ></script>
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
       <!-- <i class="fa-brands fa-twitter-square"></i> -->
-      <span id = "logo">tweeter</span>
-      <div class = "nav-right">
+      <span id="logo">tweeter</span>
+      <div class="nav-right">
         <span><b>Write</b> a new tweet</span>
-        <button type= "button">
-         <i class="fas fa-angle-double-down"></i>
+        <button type="button">
+          <i class="fas fa-angle-double-down"></i>
         </button>
       </div>
     </nav>
 
     <header id="profile">
       <div id="image">
-          <img src="/images/profile-hex.png"> 
+        <img src="/images/profile-hex.png" />
       </div>
-      <br>
+      <br />
       <div>
-          <h2>Sujatha</h2>
+        <h2>Sujatha</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -63,26 +84,24 @@
         <span class="icon-design">
           <i class="fas fa-exclamation-triangle"></i>
         </span>
-        <span id="error-text">
-        </span>
+        <span id="error-text"> </span>
         <span class="icon-design">
           <i class="fas fa-exclamation-triangle"></i>
         </span>
       </section>
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form method='POST' action='/tweets/'>
+        <form method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
           <textarea name="text" id="tweet-text"></textarea>
           <div>
-          <button type="submit">Tweet</button> 
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
         </form>
       </section>
       <!-- container for all the tweets. -->
-      <section id="tweets-container">
-      </section>
+      <section id="tweets-container"></section>
     </main>
   </body>
 </html>
