--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
           <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
+          <textarea name="text" id="tweet-text" rows = "5" cols = "50"></textarea>
           <div>
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
